# money_man

./: .gitignore  Cargo.toml  README.md  install.bat
app/: Cargo.toml
app/src/: account.rs  dollar.rs  envelope.rs  lib.rs  misc.rs  portfolio.rs  tests.rs  transaction.rs  vope.rs
app/src/misc/: dollar.rs  transaction.rs
docs/: index.html  sw.js
gui/: Cargo.toml
gui/src/: features.rs  lib.rs  main.rs  menu.rs  wrap_app.rs
gui/src/features/: acc_disp.rs  acc_matrix.rs  acc_table.rs  menu_bar.rs  piechart.rs  toggle.rs  vope_hist.rs  welcome_msg.rs
gui/src/wrap_app/: acc_mgmt.rs  assign.rs  home.rs  vope_mgr.rs  welcome.rs
gui/src/wrap_app/acc_mgmt/: assign.rs  home.rs  vope_mgr.rs
