[package]
name = "gui"
version = "0.1.0"
authors = ["Isaac Butz <isaacbutz280@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.20" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
app   = { path = "../app" }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
